cyborg: fix alignment of inputs and selects, closes #936

--- a/docs/4/cyborg/_variables.scss
+++ b/docs/4/cyborg/_variables.scss
@@ -78,10 +78,11 @@ $input-btn-padding-x:       1rem !default;
 
 $input-disabled-bg:              $gray-400 !default;
 
-$input-border-color:             transparent !default;
+$input-border-color:             $white !default;
 
 $input-group-addon-color:           $white !default;
 $input-group-addon-bg:              $gray-700 !default;
+$input-group-addon-border-color:    transparent !default;
 
 $custom-file-color:                 $white !default;
 $custom-file-border-color:          $gray-700 !default;
